<resources>

    /* BASE */
    <string name="app_name">IAmOk</string>
    <string name="base_cancel">Cancel</string>
    <string name="base_continue">Continue</string>
    <string name="base_stop">Stop</string>
    <string name="base_skip">Skip</string>
    <string name="base_done">Done</string>
    <string name="base_not_supported_yet">Not supported yet</string>
    <string name="base_image_description">Image description</string>
    <string name="base_unit_minute">minutes</string>
    <string name="base_unit_hour">hours</string>
    <string name="base_monday_short">Mon</string>
    <string name="base_tuesday_short">Tue</string>
    <string name="base_wednesday_short">Wed</string>
    <string name="base_thursday_short">Thu</string>
    <string name="base_friday_short">Fri</string>
    <string name="base_saturday_short">Sat</string>
    <string name="base_sunday_short">Sun</string>
    <string name="base_unknown">Unknown</string>

    /* TUTORIAL */
    <string name="tutorial_expedition">Are you planning a trip or an expedition? \n Want to assure your closest that you\'re okay and send them message automatically? \n Easy!</string>
    <string name="tutorial_place">Do you have an important meeting and you need to send message to colleagues or friends that you\'re at place automatically when you arrive? \n Easy!</string>
    <string name="tutorial_senior">Send an emergency message when you are inactive or immobile for some time? \n Easy!</string>
    <string name="tutorial_solution">Find the best solution for you…</string>
    <string name="tutorial_next_tip">Next tip</string>

    /* SERVICES */
    <string name="services_title">Services</string>
    <string name="services_request_invalid">Selected service is invalid, updating list of services…</string>
    <string name="services_type_specific">Specific date and time</string>
    <string name="services_type_periodic">Periodic time</string>
    <string name="services_type_sos">SOS</string>
    <string name="services_type_place">Place</string>
    <string name="services_item_delete">Delete</string>
    <string name="services_item_delete_desc">Are you sure that you want to delete this service?</string>
    <string name="services_item_rescheduled">Rescheduled! Origin time: %s</string>
    <string name="services_item_periodic">%s at %s</string>

    /* INITIATOR */
    <string name="initiator_title">Initiator</string>
    <string name="initiator_desc1">Select which one you need.</string>
    <string name="initiator_desc2">Time initiator is executed at the current time or in the range of time. Good choice for sending periodical messages to your mad wife.</string>
    <string name="initiator_desc3">Place initiator is executed when you appear inside selected area bounds. Good choice for expeditions, races, meetings, journeys etc.</string>
    <string name="initiator_desc4">The last one is SOS - it is special initiator which is executed when you are inactive for some time. It can be useful for dangerous expeditions.</string>
    <string name="initiator_button_time">Time</string>
    <string name="initiator_button_place">Place</string>
    <string name="initiator_button_sos">SOS</string>

    /* TIME INITIATOR */
    <string name="time_initiator_title">Specify the time</string>
    <string name="time_initiator_choose_date_time">Choose date and time</string>
    <string name="time_initiator_outdated">Invalid time</string>
    <string name="time_initiator_outdated_desc">An event can be scheduled at the earliest in %d minutes.</string>
    <string name="time_initiator_specific_date_time">Specific date and time:</string>
    <string name="time_initiator_periodic_tv_title">Selected days at specific time:</string>
    <string name="time_initiator_choose_time">Choose time</string>
    <string name="time_initiator_read_contact_error">Read contact error</string>
    <string name="time_initiator_read_contact_error_desc">Unable to read selected contact.</string>

    /* PLACE INITIATOR */
    <string name="place_initiator_title">Bound the area</string>
    <string name="place_initiator_desc">Move, zoom out, zoom in on the map so that the area within the blue circle matches the area that will trigger the service</string>

    /* SOS INITIATOR */
    <string name="sos_initiator_title">SOS</string>
    <string name="sos_initiator_number_picker_desc">Send an emergency message when inactivity took more than</string>

    /* MESSAGE */
    <string name="message_title">Message</string>
    <string name="message_hint">Please write a message</string>

    /* SUMMARY */
    <string name="summary_title">Summary</string>
    <string name="summary_type">Type:</string>
    <string name="summary_time">Time:</string>
    <string name="summary_message">Message:</string>
    <string name="summary_days">Days:</string>
    <string name="summary_numbers">Tel:</string>
    <string name="summary_location">Location:</string>
    <string name="summary_location_input">Latitute %d, longitude %d, radius %d meters.</string>

    /* NOTIFICATION */
    <string name="notification_sms_title">IAmOk Application SMS</string>
    <string name="notification_sms_description">Message with text: %s to number %s %s.</string>
    <string name="notification_sms_description_placeholder_ok">was successfully sent</string>
    <string name="notification_sms_description_placeholder_error_generic">failed. An unexpected error occurred.</string>
    <string name="notification_sms_description_placeholder_error_no_service">failed. No service for SMS.</string>
    <string name="notification_sms_description_placeholder_error_null_pdu">failed. Null PDU.</string>
    <string name="notification_sms_description_placeholder_error_radio_off">failed. Radio is off.</string>
    <string name="notification_sms_description_placeholder_error_reachability">failed. Service is not reachable.</string>
    <string name="notification_sms_description_placeholder_error_permission">failed. Request SMS send permission.</string>

    /* PERMISSIONS */
    <string name="permission_sms_request">SMS Permission</string>
    <string name="permission_sms_request_desc">Please, we need your permission to send SMS.</string>
    <string name="permission_contacts_request">Read Contacts Permission</string>
    <string name="permission_contacts_request_desc">We need your permission to read contacts so that you could select to whom we will send the message.</string>
    <string name="permission_location_request">Location tracking permission</string>
    <string name="permission_location_request_desc">We need your permission to track your location so that we can execute the service in the right time and right place.</string>

</resources>
