<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.InitiatorActivity">


    <TextView
        android:id="@+id/activity_initiator_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/initiator_title"
        android:textColor="@color/appOrange"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activity_initiator_description1_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/activity_initiator_title_tv"
        android:textColor="@color/appOrange"
        android:paddingBottom="20dp"
        android:text="@string/initiator_desc1" />

    <TextView
        android:id="@+id/activity_initiator_description2_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/activity_initiator_description1_tv"
        android:paddingBottom="20dp"
        android:textColor="@color/appOrange"
        android:text="@string/initiator_desc2" />

    <TextView
        android:id="@+id/activity_initiator_description3_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/activity_initiator_description2_tv"
        android:paddingBottom="20dp"
        android:textColor="@color/appOrange"
        android:text="@string/initiator_desc3" />

    <TextView
        android:id="@+id/activity_initiator_description4_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/activity_initiator_description3_tv"
        android:textColor="@color/appOrange"
        android:text="@string/initiator_desc4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="bottom|end"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/activity_initiator_time_b"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:onClick="timeButtonOnClick"
            android:textColor="@android:color/white"
            android:background="@xml/round_corners_blue"
            android:textAllCaps="false"
            android:text="@string/initiator_button_time" />

        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/activity_initiator_place_b"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:onClick="placeButtonOnClick"
            android:textColor="@android:color/white"
            android:background="@xml/round_corners_blue"
            android:textAllCaps="false"
            android:text="@string/initiator_button_place" />

        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/activity_initiator_sos_b"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:onClick="sosButtonOnClick"
            android:textColor="@android:color/white"
            android:background="@xml/round_corners_blue"
            android:textAllCaps="false"
            android:text="@string/initiator_button_sos" />

    </LinearLayout>

</RelativeLayout>