<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.TimeInitiatorActivity">

    <TextView
        android:id="@+id/activity_time_initiator_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/time_initiator_title"
        android:textColor="@color/appOrange"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/activity_time_initiator_current_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/activity_time_initiator_title_tv"
        android:paddingBottom="30dp"
        android:focusable="true">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activity_time_initiator_current_rb"
            android:clickable="false"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/appOrange"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/time_initiator_specific_date_time"/>

            <TextView
                android:id="@+id/activity_time_initiator_current_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/appOrange"
                android:gravity="center"
                android:textStyle="italic"
                android:text="@string/time_initiator_choose_date_time"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_time_initiator_periodic_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:gravity="center"
        android:layout_below="@id/activity_time_initiator_current_ll">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activity_time_initiator_periodic_rb"
            android:clickable="false"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/appOrange"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/time_initiator_periodic_tv_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/activity_time_initiator_periodic_monday_tv"
                    android:text="@string/base_monday_short"
                    android:textStyle="bold"
                    android:textColor="@color/appOrange"
                    android:padding="5dp"
                    android:onClick="onPeriodicDayClick"
                    android:tag="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/activity_time_initiator_periodic_tuesday_tv"
                    android:text="@string/base_tuesday_short"
                    android:textStyle="bold"
                    android:textColor="@color/appOrange"
                    android:padding="5dp"
                    android:onClick="onPeriodicDayClick"
                    android:tag="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/activity_time_initiator_periodic_wednesday_tv"
                    android:text="@string/base_wednesday_short"
                    android:textStyle="bold"
                    android:textColor="@color/appOrange"
                    android:padding="5dp"
                    android:onClick="onPeriodicDayClick"
                    android:tag="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/activity_time_initiator_periodic_thursday_tv"
                    android:text="@string/base_thursday_short"
                    android:textColor="@color/appOrange"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:onClick="onPeriodicDayClick"
                    android:tag="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/activity_time_initiator_periodic_friday_tv"
                    android:text="@string/base_friday_short"
                    android:textStyle="bold"
                    android:textColor="@color/appOrange"
                    android:padding="5dp"
                    android:onClick="onPeriodicDayClick"
                    android:tag="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/activity_time_initiator_periodic_saturday_tv"
                    android:text="@string/base_saturday_short"
                    android:textStyle="bold"
                    android:textColor="@color/appOrange"
                    android:tag="5"
                    android:padding="5dp"
                    android:onClick="onPeriodicDayClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/activity_time_initiator_periodic_sunday_tv"
                    android:text="@string/base_sunday_short"
                    android:textStyle="bold"
                    android:textColor="@color/appOrange"
                    android:padding="5dp"
                    android:onClick="onPeriodicDayClick"
                    android:tag="6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/activity_time_initiator_periodic_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/appOrange"
                android:gravity="center"
                android:textStyle="italic"
                android:text="@string/time_initiator_choose_time"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/activity_time_initiator_continue_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@xml/round_corners_blue"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:text="@string/base_continue" />

</RelativeLayout>