<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.SOSInitiatorActivity">

    <TextView
        android:id="@+id/activity_sos_initiator_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/sos_initiator_title"
        android:textColor="@color/appOrange"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_sos_initiator_number_picker"
        android:text="@string/sos_initiator_number_picker_desc"/>

    <TextView
        android:id="@+id/activity_sos_number_picker_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/activity_sos_initiator_number_picker"
        android:layout_toEndOf="@id/activity_sos_initiator_number_picker"
        android:text="@string/base_unit_minute"/>

    <NumberPicker
        android:id="@+id/activity_sos_initiator_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/activity_sos_initiator_continue_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@xml/round_corners_blue"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:text="@string/base_continue" />

</RelativeLayout>